# robot_dog

./: .travis.yml  README.md  robot_dog.ino
.github/workflows/: unittests.yml
src/controller/: README.md  context.hpp  context_impl.cpp  context_impl.hpp  controller.cpp  controller.hpp  handler_router.cpp  handler_router.hpp  handlers.hpp  state.hpp  state_base.cpp  state_base.hpp  state_fwd.hpp  state_id.hpp  state_lean.cpp  state_lean.hpp  state_store.hpp  state_store_fwd.hpp  state_store_impl.cpp  state_store_impl.hpp  state_trim.cpp  state_trim.hpp
src/event/: event.hpp  event_id.hpp
src/event/gamepad/: circle_button.cpp  circle_button.hpp  cross_button.cpp  cross_button.hpp  l1_button.cpp  l1_button.hpp  l2_button.cpp  l2_button.hpp  l_stick_x_move.cpp  l_stick_x_move.hpp  l_stick_y_move.cpp  l_stick_y_move.hpp  left_button.cpp  left_button.hpp  r1_button.cpp  r1_button.hpp  r2_button.cpp  r2_button.hpp  r_stick_x_move.cpp  r_stick_x_move.hpp  r_stick_y_move.cpp  (+5 more)
src/hal/: core_executer.cpp  core_executer.hpp  event_loop.hpp  event_loop_fwd.hpp  event_loop_impl.cpp  event_loop_impl.hpp  executer.hpp  executer_fwd.hpp  interpolation.hpp  interpolation_curve.hpp  interpolation_fwd.hpp  interpolation_impl.cpp  interpolation_impl.hpp
src/input_devices/: potentiometer.cpp  potentiometer.hpp  rotary_encoder.cpp  rotary_encoder.hpp  rotary_encoder_states.hpp
src/mathmatics/: calculations.cpp  calculations.hpp  calculations_fwd.hpp  calculations_impl.cpp  calculations_impl.hpp  smoother.hpp  smoother_impl.cpp  smoother_impl.hpp
src/robot/: README.md  dog.cpp  dog.hpp  leg.cpp  leg.hpp  leg_fwd.hpp  leg_type.hpp  movement.hpp  robot.hpp  robot_fwd.hpp  two_axis_leg.cpp  two_axis_leg.hpp
test/: CMakeLists.txt
test/controller/: CMakeLists.txt  context_impl_tests.cpp  context_mock.hpp  controller_tests.cpp  handler_router_tests.cpp  handlers_mock.hpp  state_lean_tests.cpp  state_mock.hpp  state_store_impl_tests.cpp  state_store_mock.hpp  state_trim_tests.cpp
test/hal/: CMakeLists.txt  executer_mock.hpp  interpolation_mock.hpp
test/hal/config/: manager_mock.hpp
test/hal/hardware/: CMakeLists.txt  arduino_mock.hpp  gamepad_factory_mock.hpp  gamepad_mock.hpp  servo_mock.hpp
test/hal/robot/: leg_factory_mock.hpp
test/input_devices/: CMakeLists.txt  potentiometer_tests.cpp  rotary_encoder_ec11_tests.cpp  rotary_encoder_ky040_tests.cpp
test/mathmatics/: CMakeLists.txt  calculations_impl_tests.cpp  calculations_mock.hpp  calculations_tests.cpp  smoother_impl_tests.cpp  smoother_mock.hpp
test/mathmatics/trigonometry/: CMakeLists.txt  isosceles_triangle_impl_tests.cpp  isosceles_triangle_mock.hpp  right_angled_triangle_impl_tests.cpp  right_angled_triangle_mock.hpp
test/robot/: CMakeLists.txt  dog_tests.cpp  leg_mock.hpp  robot_mock.hpp  two_axis_leg_tests.cpp
(+48 files in other folders)
